@@ -99,6 +99,17 @@ RCPP_FUNCTION_4(SEXP, CppClass__set, XP_Class cl, SEXP obj, std::string name, SE
 	return R_NilValue ;
 }
 
+// these operate directly on the external pointers, rather than 
+// looking up the property in the map
+RCPP_FUNCTION_3(SEXP, CppField__get, XP_Class cl, SEXP field_xp, SEXP obj){
+	return cl->getProperty__( field_xp, obj ) ;
+}
+RCPP_FUNCTION_4(SEXP, CppField__set, XP_Class cl, SEXP field_xp, SEXP obj, SEXP value){
+	cl->setProperty__( field_xp, obj, value ) ;
+	return R_NilValue ;
+}
+
+
 
 // .External functions
 extern "C" SEXP InternalFunction_invoke( SEXP args ){
